--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -1150,6 +1150,7 @@
     }
    ],
    "source": [
+    "# Ploting the accuracy of the generated model for each iteration\n",
     "fig = plt.figure(figsize = (20, 5))\n",
     "plt.plot(boosting_accs)"
    ]
@@ -1198,7 +1199,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Checking number of unique classifers chosen by Boosting\n",
     "np.unique(bossted_indexes, return_counts=True)"
    ]
   },
@@ -1219,16 +1220,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len([ 68,  69,  72,  94,  99, 105, 129, 130, 131, 134, 179, 184, 185,\n",
-    "        190, 204, 207, 209, 215, 217, 233, 234, 235, 236, 243, 244, 263,\n",
-    "        276, 291, 295, 296, 297, 315, 321, 322, 324, 330, 346, 350, 372,\n",
-    "        374, 376, 385, 386, 387, 388, 401, 405, 407, 408, 414, 415, 430,\n",
-    "        431, 432, 441, 457, 459, 460, 461, 467, 481, 484, 485, 486, 487,\n",
-    "        488, 489, 491, 494, 496, 514, 515, 541, 542, 545, 548, 576, 577,\n",
-    "        578, 580, 595, 597, 600, 601, 605, 624, 625, 656, 658, 660, 684,\n",
-    "        685])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
